// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom icons 1`] = `
.css-0,
[data-css-0] {
  vertical-align: middle;
}

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-0"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      y1="8"
      x2="12"
      y2="12"
    />
    <line
      x1="12"
      y1="16"
      x2="12"
      y2="16"
    />
  </svg>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-0"
  >
    <circle
      cx="18"
      cy="18"
      r="3"
    />
    <circle
      cx="6"
      cy="6"
      r="3"
    />
    <path
      d="M13 6h3a2 2 0 0 1 2 2v7"
    />
    <line
      x1="6"
      y1="9"
      x2="6"
      y2="21"
    />
  </svg>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-0"
  >
    <circle
      cx="18"
      cy="18"
      r="3"
    />
    <circle
      cx="6"
      cy="6"
      r="3"
    />
    <path
      d="M6 21V9a9 9 0 0 0 9 9"
    />
  </svg>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-0"
  >
    <polyline
      points="20 6 9 17 4 12"
    />
  </svg>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-0"
  >
    <line
      x1="18"
      y1="6"
      x2="6"
      y2="18"
    />
    <line
      x1="6"
      y1="6"
      x2="18"
      y2="18"
    />
  </svg>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-0"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-0"
  >
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="19"
      cy="12"
      r="1"
    />
    <circle
      cx="5"
      cy="12"
      r="1"
    />
  </svg>
</div>
`;

exports[`renders with custom color and size 1`] = `
.css-0,
[data-css-0] {
  vertical-align: middle;
}

<svg
  stroke="currentColor"
  xmlns="http://www.w3.org/2000/svg"
  height="16"
  viewBox="0 0 24 24"
  fill="none"
  width="16"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
  color="#c27e00"
  class="css-0"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
</svg>
`;

exports[`renders without crashing 1`] = `
.css-0,
[data-css-0] {
  vertical-align: middle;
}

<svg
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
  class="css-0"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
</svg>
`;
